fixed navigation wrapping order

--- a/src/app/components/nav-menu/nav-menu.component.css
+++ b/src/app/components/nav-menu/nav-menu.component.css
@@ -32,15 +32,13 @@ a { text-decoration: none; }
 .sidebar-items li {
   text-transform: uppercase;
   font-family: 'Segoe UI', sans-serif;
-  margin-bottom: 20px; 
-  cursor: pointer;
-}
-.sidebar-items a {
   color: white;
   padding: 2px 14px 5px; 
+  cursor: pointer;
   background-color: rgba(0,0,0,.5);
+  margin-bottom: 20px; 
 }
-.sidebar-items a:hover, {
+.sidebar-items li:hover {
   color: rgba(0,0,0,.85);
   background-color: #fbfbfb;
   transition: .3s ease;
